Centrally aligned the Navbar and fixed issues with 'Blog' navbar element not being directed to the Blog section

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,15 @@
 .Navbar{
     align-items: center;
     display: flex;
-    text-align: center;
+    position: fixed;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    gap: 2rem;
+    padding: 1rem 0;
+    z-index: 1000;
+
 }
 
 .Navbar-Header{
